--- a/index.html
+++ b/index.html
@@ -186,6 +186,12 @@
           
         </div>
 
+        <div class="links">
+          <p><a href="/blog">Technical blog</a></p>
+          <p><a href="/about">About Me</a></p>
+        </div>
+
+
         
       </div>
     </div>
