--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <title>takumakume pages</title>
+  <title>takumakume pages | takumakume pages</title>
   <meta property="og:title" content="takumakume pages" />
   <meta name="twitter:title" content="takumakume pages" />
   <meta name="description" content=" Takuma Kume  Infra engineer @GMO Pepabo, Inc linux/mruby/ngx_mruby/mod_mruby  Slides 2017  11&frasl;18 第10回ペパボテックカンファレンス  Webサーバ拡張における排他制御のパフォーマンスチューニング  10&frasl;08 ペパボ・はてな技術大会  ホスティングにおける安定運用のためのアクセスコントロール手法  4&frasl;26 ホスティング Tech MTG  MHAでデータベースの運用を楽にしよう！   2016  10&frasl;29 GMO Hosting conference  ホスティングにおける柔軟なアクセス制御の必要性とその実装   2013  07/18 DNS Summer Days 2013  児童ポルノブロッキングの実装と運用自動化   ">
@@ -177,17 +177,17 @@
 <li><sup>11</sup>&frasl;<sub>18</sub> 第10回ペパボテックカンファレンス
 
 <ul>
-<li><a href="https://speakerdeck.com/takumakume/performance-tuning-of-exclusive-control-in-web-server-extension">Webサーバ拡張における排他制御のパフォーマンスチューニング</a></li>
+<li><u><a href="https://speakerdeck.com/takumakume/performance-tuning-of-exclusive-control-in-web-server-extension">Webサーバ拡張における排他制御のパフォーマンスチューニング</a></u></li>
 </ul></li>
 <li><sup>10</sup>&frasl;<sub>08</sub> ペパボ・はてな技術大会
 
 <ul>
-<li><a href="https://speakerdeck.com/takumakume/mhadedetabesufalseyun-yong-wole-nisiyou-1">ホスティングにおける安定運用のためのアクセスコントロール手法</a></li>
+<li><u><a href="https://speakerdeck.com/takumakume/mhadedetabesufalseyun-yong-wole-nisiyou-1">ホスティングにおける安定運用のためのアクセスコントロール手法</a></u></li>
 </ul></li>
 <li><sup>4</sup>&frasl;<sub>26</sub> ホスティング Tech MTG
 
 <ul>
-<li><a href="https://speakerdeck.com/takumakume/hosuteinguniokeruan-ding-yun-yong-falsetamefalseakusesukontororushou-fa">MHAでデータベースの運用を楽にしよう！</a></li>
+<li><u><a href="https://speakerdeck.com/takumakume/hosuteinguniokeruan-ding-yun-yong-falsetamefalseakusesukontororushou-fa">MHAでデータベースの運用を楽にしよう！</a></u></li>
 </ul></li>
 </ul>
 
@@ -197,7 +197,7 @@
 <li><sup>10</sup>&frasl;<sub>29</sub> GMO Hosting conference
 
 <ul>
-<li><a href="https://speakerdeck.com/takumakume/hoscon2016-shibuya-takumakume">ホスティングにおける柔軟なアクセス制御の必要性とその実装</a></li>
+<li><u><a href="https://speakerdeck.com/takumakume/hoscon2016-shibuya-takumakume">ホスティングにおける柔軟なアクセス制御の必要性とその実装</a></u></li>
 </ul></li>
 </ul>
 
@@ -207,7 +207,7 @@
 <li>07/18 DNS Summer Days 2013
 
 <ul>
-<li><a href="https://speakerdeck.com/takumakume/implementation-and-operation-automation-of-child-porn-blocking">児童ポルノブロッキングの実装と運用自動化</a></li>
+<li><u><a href="https://speakerdeck.com/takumakume/implementation-and-operation-automation-of-child-porn-blocking">児童ポルノブロッキングの実装と運用自動化</a></u></li>
 </ul></li>
 </ul>
 
