--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <title>takumakume pages</title>
+  <title>takumakume pages | takumakume pages</title>
   <meta property="og:title" content="takumakume pages" />
   <meta name="twitter:title" content="takumakume pages" />
   <meta name="author" content="Takuma Kume"/>
