--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <title>404 Page not found</title>
+  <title>404 Page not found | takumakume pages</title>
   <meta property="og:title" content="404 Page not found" />
   <meta name="twitter:title" content="404 Page not found" />
   <meta name="author" content="Takuma Kume"/>
